# platform.upstream.gumd

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  debian  packaging  project.config
data/: Makefile.am  Makefile.in  gumd.conf.in  gumd.service
data/tizen/etc/gumd/: gumd-tizen-common.conf  gumd-tizen-ivi.conf  gumd-tizen-tv.conf
dists/debian/: README.Debian  changelog  control  copyright  files  gum-utils.install  gumd-dev.install  gumd.install  gumd.postinst  gumd.postrm  gumd.preinst  gumd.prerm  libgum-common-dev.install  libgum-common.install  libgum-common.preinst  libgum-dev.install  libgum-dev.substvars  libgum.install  libgum.substvars  rules
dists/debian/gumd/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst  prerm
dists/debian/gumd/etc/dbus-1/system.d/: gumd-dbus.conf
dists/debian/gumd/usr/share/dbus-1/system-services/: org.tizen.SecurityAccounts.gUserManagement.service
dists/debian/libgum-dev/DEBIAN/: control  md5sums
dists/debian/libgum-dev/usr/include/gum/common/: gum-config-dbus.h  gum-config.h  (+2 more)
dists/debian/libgum-dev/usr/lib/: libgum-common.la
dists/debian/libgum/DEBIAN/: control  md5sums  shlibs
dists/debian/libgum/usr/lib/: libgum-common.so.0.0.0  libgum.so.0.0.0
dists/debian/tmp/usr/include/gum/: gum-group.h
dists/debian/tmp/usr/lib/: libgum.la  libgum.so.0.0.0
dists/debian/tmp/usr/lib/pkgconfig/: libgum.pc
dists/rpm/: gum-suse.spec  gum-tizen.spec
dists/rpm/tizen/packaging/: gum-tizen.changes  gum-tizen.spec  gumd.changes  gumd.spec
docs/: Makefile.am  Makefile.in  building.xml  examples.xml  gumd-docs.sgml  gumd-sections.txt  gumd.types  introduction.xml  utils.xml
docs/html/: GumConfig.html  GumDisposable.html  GumGroup.html  GumUser.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  gumd-DBus-configuration.html  gumd-Errors.html  gumd-General-configuration.html  gumd-Group-types.html  gumd-Gum-Crypt.html  gumd-Gum-Error.html  gumd-Gum-File.html  gumd-Gum-Lock.html  gumd-Gum-String-Utils.html  gumd-Gum-User-Types.html  gumd-Gum-Utils.html  gumd-Gum-Validate.html  gumd-GumDictionary.html  gumd-Logging.html  gumd-User-types.html  gumd-examples.html  gumd-utils.html  gumd.devhelp2  index.html  index.sgml  um-building.html  um-intro.html
examples/: Makefile.am  Makefile.in  gum-example.c
include/gum/: gum-group.h  gum-user-service.h  gum-user.h
include/gum/common/: gum-config-dbus.h  gum-config-general.h  gum-config.h  gum-crypt.h  gum-dictionary.h  gum-disposable.h  gum-error.h  gum-file.h  gum-group-types.h  gum-lock.h  gum-log.h  gum-string-utils.h  gum-user-types.h  gum-utils.h  gum-validate.h
packaging/: gum-tizen.changes  gum-tizen.spec  gumd-tizen.conf  gumd.changes  gumd.manifest  gumd.spec  libgum-common.manifest  libgum.manifest
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  gum-config.c  gum-crypt.c  gum-dbus.h  gum-defines.h  gum-dictionary.c  gum-disposable.c  gum-error.c  gum-file.c  gum-lock.c  gum-string-utils.c  gum-user-types.c  gum-utils.c  gum-validate.c  gum.conf.in  libgum-common-uninstalled.pc.in  libgum-common.pc.in
src/common/dbus/: Makefile.am  Makefile.in  gum-dbus-group-gen.c  gum-dbus-group-gen.h  gum-dbus-group-service-gen.c  gum-dbus-group-service-gen.h  gum-dbus-user-gen.c  gum-dbus-user-gen.h  gum-dbus-user-service-gen.c  gum-dbus-user-service-gen.h
src/common/dbus/interfaces/: org.O1.SecurityAccounts.gUserManagement.Group.xml  org.O1.SecurityAccounts.gUserManagement.GroupService.xml  org.O1.SecurityAccounts.gUserManagement.User.xml  org.O1.SecurityAccounts.gUserManagement.UserService.xml  org.tizen.SecurityAccounts.gUserManagement.Group.xml  org.tizen.SecurityAccounts.gUserManagement.GroupService.xml  org.tizen.SecurityAccounts.gUserManagement.User.xml  org.tizen.SecurityAccounts.gUserManagement.UserService.xml
src/daemon/: Makefile.am  Makefile.in  gumd-daemon-group.c  gumd-daemon-offline.c  gumd-daemon-offline.h  gumd-daemon-user.c  gumd-daemon-user.h  gumd-daemon.c  gumd-types.h  gumd-uninstalled.pc.in  gumd.conf.in  gumd.pc.in  main.c
src/daemon/core/: Makefile.am  Makefile.in  gumd-daemon-group.c  gumd-daemon-group.h  gumd-daemon-offline.c  gumd-daemon-user.c  gumd-daemon-user.h  gumd-daemon.c  gumd-daemon.h
src/daemon/dbus/: Makefile.am  Makefile.in  gumd-dbus-group-adapter.c  gumd-dbus-group-adapter.h  gumd-dbus-group-service-adapter.c  gumd-dbus-group-service-adapter.h  gumd-dbus-server-interface.c  gumd-dbus-server-interface.h  gumd-dbus-server-msg-bus.c  gumd-dbus-server-msg-bus.h  gumd-dbus-server-p2p.c  gumd-dbus-server-p2p.h  gumd-dbus-user-adapter.c  gumd-dbus-user-adapter.h  gumd-dbus-user-service-adapter.c  gumd-dbus-user-service-adapter.h  gumd-dbus.conf.in
src/daemon/dbus/services/: org.O1.SecurityAccounts.gUserManagement.service.in  org.tizen.SecurityAccounts.gUserManagement.service.in
src/lib/: Makefile.am  Makefile.in  gum-group-service.c  gum-group-service.h  gum-group.c  gum-internals.h  gum-user-service.c  gum-user-service.h  gum-user.c  libgum-uninstalled.pc.in  libgum.pc.in
src/utils/: Makefile.am  Makefile.in  gum-utils.c  gumd-utils.c
test/: Makefile.am  Makefile.in  test_common.mk  valgrind.supp  valgrind_common.mk
test/common/: Makefile.am  Makefile.in  commontest.c
test/daemon/: Makefile.am  Makefile.in  daemon-test.c
test/data/: group  gshadow  gum-test.conf  gumd-dbus.conf.in  gumd.conf  passwd  shadow  test-gumd-dbus.conf  test-gumd-dbus.conf.in
test/data/groupadd.d/: group_add.sh
test/data/groupdel.d/: group_del.sh
test/data/services/: org.O1.SecurityAccounts.gUserManagement.service.in  org.tizen.SecurityAccounts.gUserManagement.service  org.tizen.SecurityAccounts.gUserManagement.service.in
test/data/skel/: .bashrc  .profile  examples.desktop
test/data/skel/recur/: examples.desktop
test/data/useradd.d/: user_add.sh
test/data/userdel.d/: user_del.sh
test/lib/: Makefile.am  Makefile.in  client-test.c
tools/: prepare-tizen.sh  run-tests.sh  setup-and-start-daemon.sh
(+4 files in other folders)
